# Mita-Assistant

./: .gitignore  LICENSE  README.md  build.sh  nob.c  pyproject.toml  pyrightconfig.json
src/: detection.py  main.c  main.py  player.py
src/audio/: audio_capture.c  audio_capture.h
src/config/: __init__.py  configuration.py
src/speech/: speech_recognition.c  speech_recognition.h
src/wake word activation/: Hey-Mita_en_linux_v3_0_0.ppn
